<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@integer/MENU_HOME" android:title="@string/menu_home" android:icon="@drawable/ic_menu_home" />
	<item android:id="@integer/MENU_MAP" android:title="@string/menu_map" android:icon="@drawable/ic_menu_mapmode" />
	<item android:id="@integer/MENU_SCAN" android:title="@string/menu_scan" android:icon="@drawable/ic_menu_qr" />
	<item android:id="@integer/MENU_CAMERA" android:title="@string/menu_camera" android:icon="@drawable/ic_menu_camera" />
	<item android:id="@integer/MENU_PREVIOUS" android:title="@string/menu_previous" android:icon="@drawable/ic_menu_back" />
	<item android:id="@integer/MENU_NEXT" android:title="@string/menu_next" android:icon="@drawable/ic_menu_forward" />
</menu>