<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SharedBackground"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <org.wildlifeimages.android.wildlifeimages.ExhibitView
        android:id="@+id/intro"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:scrollbars="none" />

    <ScrollView
        android:id="@+id/intro_sidebar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/intro_sidebar_intro"
                style="@style/IntroHorizontalButton"
                android:text="@string/intro_sidebar_about" />

            <Button
                android:id="@+id/intro_sidebar_donations"
                style="@style/IntroHorizontalButton"
                android:text="@string/intro_sidebar_support" />

            <Button
                android:id="@+id/intro_sidebar_events"
                style="@style/IntroHorizontalButton"
                android:text="@string/intro_sidebar_events" />

            <Button
                android:id="@+id/intro_sidebar_photos"
                style="@style/IntroHorizontalButton"
                android:text="@string/intro_sidebar_photos" />

            <Button
                android:id="@+id/intro_sidebar_app"
                style="@style/IntroHorizontalButton"
                android:text="@string/intro_sidebar_app" />

            <Button
                android:id="@+id/intro_sidebar_exhibitlist"
                style="@style/IntroHorizontalButton"
                android:text="@string/intro_sidebar_exhibitlist" />

            <Button
                android:id="@+id/intro_sidebar_map"
                style="@style/IntroHorizontalButton"
                android:text="@string/intro_sidebar_map" />

            <Button
                android:id="@+id/intro_sidebar_share"
                style="@style/IntroHorizontalButton"
                android:text="@string/intro_sidebar_share" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>